update completed url

--- a/registration/completed.html
+++ b/registration/completed.html
@@ -21,7 +21,8 @@ License: For each use you must have a valid license purchased only from above li
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Metronic - Bootstrap Admin Template, HTML, VueJS, React, Angular. Laravel, Asp.Net Core, Ruby on Rails, Spring Boot, Blazor, Django, Express.js, Node.js, Flask Admin Dashboard Theme & Template" />
+    <meta property="og:title"
+        content="Metronic - Bootstrap Admin Template, HTML, VueJS, React, Angular. Laravel, Asp.Net Core, Ruby on Rails, Spring Boot, Blazor, Django, Express.js, Node.js, Flask Admin Dashboard Theme & Template" />
     <meta property="og:url" content="https://keenthemes.com/metronic" />
     <meta property="og:site_name" content="Keenthemes | Metronic" />
     <link rel="canonical" href="https://preview.keenthemes.com/metronic8" />
@@ -43,7 +44,8 @@ License: For each use you must have a valid license purchased only from above li
 <!--end::Head-->
 <!--begin::Body-->
 
-<body id="kt_app_body" data-kt-app-layout="light-header" data-kt-app-header-fixed="true" data-kt-app-toolbar-enabled="true" class="app-default">
+<body id="kt_app_body" data-kt-app-layout="light-header" data-kt-app-header-fixed="true"
+    data-kt-app-toolbar-enabled="true" class="app-default">
     <!--begin::Theme mode setup on page load-->
     <script>
         var defaultThemeMode = "light";
@@ -70,30 +72,41 @@ License: For each use you must have a valid license purchased only from above li
         <!--begin::Page-->
         <div class="app-page flex-column flex-column-fluid" id="kt_app_page">
             <!--begin::Header-->
-            <div id="kt_app_header" class="app-header" data-kt-sticky="true" data-kt-sticky-activate="{default: true, lg: true}" data-kt-sticky-name="app-header-minimize" data-kt-sticky-offset="{default: '200px', lg: '0'}" data-kt-sticky-animation="false">
+            <div id="kt_app_header" class="app-header" data-kt-sticky="true"
+                data-kt-sticky-activate="{default: true, lg: true}" data-kt-sticky-name="app-header-minimize"
+                data-kt-sticky-offset="{default: '200px', lg: '0'}" data-kt-sticky-animation="false">
                 <!--begin::Header container-->
-                <div class="app-container container-xxl d-flex align-items-stretch justify-content-between" id="kt_app_header_container">
+                <div class="app-container container-xxl d-flex align-items-stretch justify-content-between"
+                    id="kt_app_header_container">
                     <!--begin::Logo-->
                     <div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0 me-lg-15">
-                        <a href="../index.html">
+                        <a href="https://www.dmcfincap.com/">
                             <img src="../assets/img/dmc-full.png" alt="" width="200px" />
                         </a>
                     </div>
                     <!--end::Logo-->
                     <!--begin::Header wrapper-->
-                    <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
+                    <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1"
+                        id="kt_app_header_wrapper">
                         <!--begin::Menu wrapper-->
-                        <div class="app-header-menu app-header-mobile-drawer align-items-stretch" data-kt-drawer="true" data-kt-drawer-name="app-header-menu" data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="800px" data-kt-drawer-direction="end"
-                            data-kt-drawer-toggle="#kt_app_header_menu_toggle" data-kt-swapper="true" data-kt-swapper-mode="{default: 'append', lg: 'prepend'}" data-kt-swapper-parent="{default: '#kt_app_body', lg: '#kt_app_header_wrapper'}">
+                        <div class="app-header-menu app-header-mobile-drawer align-items-stretch" data-kt-drawer="true"
+                            data-kt-drawer-name="app-header-menu" data-kt-drawer-activate="{default: true, lg: false}"
+                            data-kt-drawer-overlay="true" data-kt-drawer-width="800px" data-kt-drawer-direction="end"
+                            data-kt-drawer-toggle="#kt_app_header_menu_toggle" data-kt-swapper="true"
+                            data-kt-swapper-mode="{default: 'append', lg: 'prepend'}"
+                            data-kt-swapper-parent="{default: '#kt_app_body', lg: '#kt_app_header_wrapper'}">
                             <!--begin::Menu-->
-                            <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0" id="kt_app_header_menu" data-kt-menu="true">
+                            <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0"
+                                id="kt_app_header_menu" data-kt-menu="true">
                                 <!--begin:Menu item-->
-                                <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-here-bg menu-lg-down-accordion me-0 me-lg-2">
+                                <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}"
+                                    data-kt-menu-placement="bottom-start"
+                                    class="menu-item menu-here-bg menu-lg-down-accordion me-0 me-lg-2">
                                     <!--begin:Menu link-->
-                                    <a href="../index.html"><span class="menu-link">
-											<span class="menu-title">Home</span>
-											<span class="menu-arrow d-lg-none"></span>
-										</span></a>
+                                    <a href="https://www.dmcfincap.com/"><span class="menu-link">
+                                            <span class="menu-title">Home</span>
+                                            <span class="menu-arrow d-lg-none"></span>
+                                        </span></a>
                                     <!--end:Menu link-->
                                     <!--begin:Menu sub-->
 
@@ -101,12 +114,14 @@ License: For each use you must have a valid license purchased only from above li
                                 </div>
                                 <!--end:Menu item-->
                                 <!--begin:Menu item-->
-                                <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-0 me-lg-2">
+                                <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}"
+                                    data-kt-menu-placement="bottom-start"
+                                    class="menu-item menu-lg-down-accordion me-0 me-lg-2">
                                     <!--begin:Menu link-->
                                     <a href="#"><span class="menu-link">
-											<span class="menu-title">Help</span>
-											<span class="menu-arrow d-lg-none"></span>
-										</span></a>
+                                            <span class="menu-title">Help</span>
+                                            <span class="menu-arrow d-lg-none"></span>
+                                        </span></a>
                                     <!--end:Menu link-->
                                     <!--begin:Menu sub-->
 
@@ -114,12 +129,14 @@ License: For each use you must have a valid license purchased only from above li
                                 </div>
                                 <!--end:Menu item-->
                                 <!--begin:Menu item-->
-                                <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
+                                <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}"
+                                    data-kt-menu-placement="bottom-start"
+                                    class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
                                     <!--begin:Menu link-->
-                                    <a href="../contact.html"><span class="menu-link">
-											<span class="menu-title">Contact Us</span>
-											<span class="menu-arrow d-lg-none"></span>
-										</span></a>
+                                    <a href="https://www.dmcfincap.com/contact"><span class="menu-link">
+                                            <span class="menu-title">Contact Us</span>
+                                            <span class="menu-arrow d-lg-none"></span>
+                                        </span></a>
                                     <!--end:Menu link-->
                                     <!--begin:Menu sub-->
 
@@ -183,7 +200,8 @@ License: For each use you must have a valid license purchased only from above li
                                     <!--begin::Tab content-->
                                     <div class="card-body border-top p-9">
                                         <!--begin::Notice-->
-                                        <div class="notice d-flex bg-light-primary rounded border-primary border border-dashed mb-9 p-6">
+                                        <div
+                                            class="notice d-flex bg-light-primary rounded border-primary border border-dashed mb-9 p-6">
                                             <!--begin::Icon-->
                                             <i class="ki-duotone ki-design-1 fs-2tx text-primary me-4"></i>
                                             <!--end::Icon-->
@@ -191,12 +209,16 @@ License: For each use you must have a valid license purchased only from above li
                                             <div class="d-flex flex-stack flex-grow-1 flex-wrap flex-md-nowrap">
                                                 <!--begin::Content-->
                                                 <div class="mb-3 mb-md-0 fw-semibold">
-                                                    <h4 class="text-gray-900 fw-bold">Terima kasih kerana memilih kami!</h4><br>
-                                                    <div class="fs-6 text-gray-700 pe-7">Permohonan dan pendaftaran anda sedang direkod untuk proses seterusnya.</div>
+                                                    <h4 class="text-gray-900 fw-bold">Terima kasih kerana memilih kami!
+                                                    </h4><br>
+                                                    <div class="fs-6 text-gray-700 pe-7">Permohonan dan pendaftaran anda
+                                                        sedang direkod untuk proses seterusnya.</div>
                                                 </div>
                                                 <!--end::Content-->
                                                 <!--begin::Action-->
-                                                <a href="../index.html" class="btn btn-primary px-6 align-self-center text-nowrap">Kembali ke Utama</a>
+                                                <a href="https://www.dmcfincap.com/"
+                                                    class="btn btn-primary px-6 align-self-center text-nowrap">Kembali
+                                                    ke Utama</a>
                                                 <!--end::Action-->
                                             </div>
                                             <!--end::Notice-->
